# dronecam

./: .gitignore  README.md  pyproject.toml
notebooks/: dronecam-eda.ipynb  dronecam-inference-yolo.ipynb  dronecam-preprocessing.ipynb  dronecam-train-yolo.ipynb
outputs/metrics/test_model/: args.yaml  results.csv
src/dronecam/: __init__.py
src/dronecam/cli/: infer.py  preprocess.py  track.py  train.py
src/dronecam/inference/: __init__.py  predict.py
src/dronecam/preprocessing/: __init__.py  config.py  pipeline.py
src/dronecam/tracking/: __init__.py  sahi_tracker.py  yolo_tracker.py
src/dronecam/training/: __init__.py  trainer.py
